--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
         <div class="container-img">
             <img src="./assets/undraw_barbecue_3x93.svg" alt="Barbecue">
             <div class="text">
-                <h2>What is Lorem Ipsum?</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                    into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                    release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
-                    software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+               <h2>Barbecue Calculator</h2>
+                <p>This is a Barbecue Calculator website , this is a simple project using Basic JavaScript,CSS and
+                    HTML.HEre you can calculate the meat,beer cans and bottle of soda to use in you barbecue , i hope
+                    you enjoy!</p>
             </div>
          </div>
 
