--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbecue Calculator</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,300&family=Playfair+Display:ital,wght@1,500&family=Shippori+Mincho:wght@500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assets/meat.svg">
 </head>
