--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="text">
                <h2>Barbecue Calculator</h2>
                 <p>This is a Barbecue Calculator website , this is a simple project using Basic JavaScript,CSS and
-                    HTML.HEre you can calculate the meat,beer cans and bottle of soda to use in you barbecue , i hope
+                    HTML.Here you can calculate the meat,beer cans and bottle of soda to use in you barbecue , i hope
                     you enjoy!</p>
             </div>
          </div>
